--- a/src/App.css
+++ b/src/App.css
@@ -135,14 +135,6 @@
   color: #fff;
   font-size: 48px;
   text-align: center;
-
-  @media screen and (max-width: 768px) {
-    font-size: 40px;
-  }
-
-  @media screen and (max-width: 480px) {
-    font-size: 32px;
-  }
 }
 
 .heroP {
@@ -151,25 +143,13 @@
   font-size: 24px;
   text-align: center;
   max-width: 600px;
-
-  @media screen and (max-width: 768px) {
-    font-size: 24px;
-  }
-
-  @media screen and (max-width: 480px) {
-    font-size: 18px;
-  }
 }
 
 /* AboutUs css */
 
 .aboutUsContainer {
   color: #fff;
-  background-color: '#010606';
-
-  @media screen and (max-width: 768px) {
-    padding: 100px 0;
-  }
+  background-color: #010606;
 }
 
 .aboutUsWrapper {
@@ -189,10 +169,6 @@
   grid-auto-columns: minmax(auto, 1fr);
   align-items: center;
   grid-template-areas: 'col1 col2';
-
-  @media screen and (max-width: 768px) {
-    grid-template-areas: 'col1 col1' 'col2 col2';
-  }
 }
 
 .aboutUsTxt{
@@ -219,10 +195,6 @@
   line-height: 1.1;
   font-weight: 600;
   color: '#f7f8fa';
-
-  @media screen and (max-width: 480px) {
-    font-size: 32px;
-  }
 }
 
 .aboutUsP {
@@ -255,14 +227,6 @@
   justify-content: center;
   align-items: center;
   background: #fff;
-
-  @media screen and (max-width: 768px) {
-    height: 1100px;
-  }
-
-  @media screen and (max-width: 480px) {
-    height: 1300px;
-  }
 }
 
 .blogWrapper {
@@ -273,15 +237,6 @@
   align-items: center;
   grid-gap: 16px;
   padding: 0 50px;
-
-  @media screen and (max-width: 1000px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @media screen and (max-width: 768px) {
-    grid-template-columns: 1fr;
-    padding: 0 20px;
-  }
 }
 
 .blogCard {
@@ -312,10 +267,6 @@
 .blogH1 {
   font-size: 2.5rem;
   margin-bottom: 64px;
-
-  @media screen and (max-width: 480px) {
-    font-size: 2rem;
-  }
 }
 
 .blogH2 {
@@ -335,10 +286,6 @@
 .contactUsContainer {
   color: #fff;
   background-color: '#f9f9f9';
-
-  @media screen and (max-width: 768px) {
-    padding: 100px 0;
-  }
 }
 
 .contactUsWrapper {
@@ -358,10 +305,6 @@
   grid-auto-columns: minmax(auto, 1fr);
   align-items: center;
   grid-template-areas: 'col2 col1';
-
-  @media screen and (max-width: 768px) {
-    grid-template-areas: 'col1 col1' 'col2 col2';
-  }
 }
 
 .contactUsTxt{
@@ -388,10 +331,6 @@
   line-height: 1.1;
   font-weight: 600;
   color: '#010606';
-
-  @media screen and (max-width: 480px) {
-    font-size: 32px;
-  }
 }
 
 .contactUsP {
@@ -442,10 +381,6 @@
   align-items: center;
   max-width: 1100px;
   margin: 40px auto 0 auto;
-
-  @media screen and (max-width: 820px) {
-    flex-direction: column;
-  }
 }
 
 .footerLogo {
@@ -471,4 +406,75 @@
   justify-content: space-between;
   align-items: center;
   width: 240px;
+}
+
+@media screen and (max-width: 1000px) {
+  .blogWrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .heroH1{
+      font-size: 40px;
+  }
+  .heroP{
+    font-size: 24px;
+  }
+  .aboutUsContainer {
+    padding: 100px 0;
+  }
+  .aboutUsInfo {
+    grid-template-areas: 'col1 col1' 'col2 col2';
+  }
+
+  .blogContainer {
+    height: 1100px;
+  }
+
+  .blogWrapper {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+
+  .contactUsContainer {
+    padding: 100px 0;
+  }
+
+  .contactUsInfo {
+    grid-template-areas: 'col1 col1' 'col2 col2';
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+  .heroH1{
+      font-size: 32px;
+  }
+
+  .heroP{
+    font-size: 18px;
+  }
+  .aboutUsH1 {
+    font-size: 32px;
+  }
+
+  .blogContainer {
+    height: 1300px;
+  }
+
+  .blogH1 {
+    font-size: 2rem;
+  }
+
+  .contactUsH1 {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .adminButtonWrap {
+    flex-direction: column;
+  }
 }
