--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -162,13 +162,14 @@
 }
 
 .blogWrapper {
-  max-width: 1000px;
-  margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-items: center;
   grid-gap: 16px;
-  padding: 0 50px;
+  padding: 16px;
+  grid-template-columns: repeat(auto-fill,minmax(350px,350px));
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(160px,350px);
+  overflow-x: auto;
+  align-items: center;
 }
 
 .blogCard {
@@ -178,7 +179,8 @@
   justify-content: flex-start;
   align-items: center;
   border-radius: 10px;
-  max-height: 340px;
+  height: 400px;
+  width: 350px;
   padding: 30px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   transition: all 0.2s ease-in-out;
@@ -192,8 +194,9 @@
 
 .blogPhoto {
   height: 160px;
-  width: 160px;
-  margin-bottom: 10px;
+  width: 100%;
+  margin-bottom: 20px;
+  object-fit: cover;
 }
 
 .blogH1 {
@@ -204,13 +207,77 @@
 .blogH2 {
   font-size: 1rem;
   margin-bottom: 10px;
+  text-align: center;
+  height: 50px;
   color: white;
 }
 
 .blogP {
   font-size: 1rem;
+  margin-bottom: 10px;
   text-align: center;
   color: white;
+}
+
+/* Blog Modal css */
+
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(10, 10, 10, 0.877);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContainer {
+  width: 75vw;
+  max-height: 95vh;
+  min-height: 70vh;
+  border-radius: 5px;
+  background-color: rgb(255, 131, 30);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+}
+
+.modalImg {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+.modalTitle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+}
+
+.modalBtn {
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: none;
+  border: none;
+  font-weight: bolder;
+  font-size: 25px;
+  cursor: pointer;
+  color: black;
+}
+
+.modalBodyContainer {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.modalP {
+  margin: 30px 10px 30px 10px;
+  font-size: 1rem;
+  text-align: center;
 }
 
 /* ContactUs css */
@@ -362,6 +429,240 @@
   font-size: 20px;
   cursor: pointer;
   font-weight: bold;
+}
+
+/* CreateBlogPage css */
+
+.createBlogContainer {
+  min-height: 692px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 0;
+  overflow: hidden;
+  background: rgb(255, 166, 0);
+}
+
+.createBlogFormWrap{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.createBlogIcon {
+  margin-left: 32px;
+  margin-top: 32px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.createBlogFormContent {
+  height: 100%;
+  display: flex;
+  padding: 10vh;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.createBlogImg {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.createBlogForm {
+  background: white;
+  max-width: 800px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
+  display: grid;
+  margin: 0 auto;
+  padding: 80px 32px;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.9);
+}
+
+.createBlogFormH1 {
+  margin-bottom: 40px;
+  color: black;
+  font-size: 40px;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.createBlogFormLabel {
+  margin-bottom: 8px;
+  font-size: 20px;
+  color: black;
+}
+
+.createBlogFormInput {
+  padding: 16px 16px;
+  margin-bottom: 32px;
+  border: none;
+  border-radius: 4px;
+}
+
+.createBlogFormButton {
+  background: rgb(255, 166, 0);
+  padding: 16px 0;
+  border: none;
+  margin-top: 50px;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.createBlogFormButton2 {
+  background: rgb(146, 146, 146);
+  padding: 16px 0;
+  border: none;
+  margin-top: 50px;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+}
+
+/* BlogListPage css */
+
+.blogListContainer {
+  min-height: 692px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 0;
+  overflow: hidden;
+  background: rgb(255, 166, 0);
+}
+
+.blogListTableWrap{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.blogListIcon {
+  margin-left: 32px;
+  margin-top: 32px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.blogListTableContent {
+  height: 100%;
+  display: flex;
+  padding: 10vh;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.blogListTableContainer {
+  background: white;
+  max-width: 800px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
+  margin: 0 auto;
+  padding: 80px 32px;
+  border-radius: 4px;
+}
+
+.blogListFixHead {
+  overflow: auto; 
+  height: 500px;
+}
+
+.blogListFixHead thead th { 
+  position: sticky; 
+  top: 0; 
+  z-index: 1; }
+
+.blogListTable {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+.blogListTableH1 {
+  margin-bottom: 10px;
+  color: black;
+  font-size: 40px;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.blogListTableText {
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: black;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px 16px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+  background-color: rgb(255, 166, 0);
+  color: white;
+}
+
+.blogListeditButton {
+  background: rgb(148, 148, 148);
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+  color: #fff;
+  font-size: 13px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+}
+
+.blogListdelButton {
+  background: rgb(255, 85, 43);
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+  color: #fff;
+  font-size: 13px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+}
+
+.blogListButton2 {
+  float:right;
+  margin-top: 20px;
+  background: rgb(255, 166, 0);
+  padding: 10px 20px 10px 20px;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 17px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
 }
 
 /* Footer css */
